# ShareIT

./: .gitignore  CMakeLists.txt  README.md  check_lib.sh
GUI/include/: mainwindow.h
GUI/src/: main.cpp  mainwindow.cpp
ShareIT/: CMakeLists.txt  mainwindow.h  mainwindow.ui  senderwindow.ui
ShareIT/Icons/: ShareIcon.jpg:Zone.Identifier
include/: Connection.hh  DataHandler.hh  DataPacket.hh  Reciever.hh  Sender.hh
src/: main.cc  receiver  receiver.cc  sender  sender.cc
tests/: testdataHandler.cc
